- moving @testing-library/react from dependencies to devDependencies - adding "build-test-css" to "scripts" so index.css is generated for testing - updating "test" script so it first calls "build-test-css"

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@storybook/addon-console": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "linked-list": "^3.1.0",
     "react": "^18.2.0",
@@ -17,10 +16,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "build-test-css react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build-test-css": "tailwindcss -i ./src/index.css -o ./src/test/index.css"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +52,7 @@
     "@storybook/react": "^7.6.16",
     "@storybook/react-webpack5": "^7.6.16",
     "@storybook/test": "^7.6.16",
+    "@testing-library/react": "^14.2.1",
     "eslint-plugin-storybook": "^0.6.15",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.16",
