--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@storybook/addon-console": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
     "linked-list": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "typescript": "^5.4.2",
     "uuid": "^9.0.1"
   },
   "scripts": {
